Style logo and remove link underline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,17 @@ header{
    box-shadow: 0 2px 2px #3a3a3a;
   
 }
+header a {
+   text-decoration: none;
+   color: inherit;
+}
+
 h1{
     font-family: "Oswald", sans-serif;
     font-weight: 700;
+    text-transform: uppercase;      /* Makes the text uppercase */
+    letter-spacing: 2px;
+    color:#252525
 }
 
 
