Display navbar items, hide toggle label. favicon is working again. All good point to start again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,4 +179,8 @@ footer {
    #menu li {
       padding-left: 1rem;
    }
+   .nav-toggle-label {
+      display: none;
+      /* Hide the toggle label on larger screens */
+   }
 }
