Add social media link, with icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ main {
 }
 /* footer */
 footer {
-   background: green;
+   background: #ffffff;
 }
 
 /*Media queries for responsive design for tablet and larger (768px and up) */
