--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,52 +130,30 @@ main {
 color: #ffffff;
 }
 
+/* Reasons Section */
+#reasons {
+   width: 90%;
+   margin: 20px auto;
+}
 
-/* Font import for Lato */
-/* <weight>: Use a value from 100 to 700*/
-/*lato: css class*/
-
-
-.lato-thin {
-   font-family: "Lato", sans-serif;
-   font-weight: 100;
-   font-style: normal;
+#reasons h2 {
+   text-align: center;
+   margin-bottom: 20px;
+   font-size: 280%;
+}
+#benefits-physical > div, #benefits-mental > div {
+   margin-bottom: 20px;
+   line-height: 20px;
+}
+#benefits p {
+   padding: 0 20px;
+}
+hr {
+   border-top: 1px solid #3a3a3a;
+   margin: 5px 0;
 }
 
 
-.lato-light {
-   font-family: "Lato", sans-serif;
-   font-weight: 300;
-   font-style: normal;
-}
-
-
-.lato-regular {
-   font-family: "Lato", sans-serif;
-   font-weight: 400;
-   font-style: normal;
-}
-
-
-.lato-bold {
-   font-family: "Lato", sans-serif;
-   font-weight: 700;
-   font-style: normal;
-}
-
-
-/*oswald: css class for a variable style*/
-/* Font import for Oswald */
-/*<weight>: Use a value from 200 to 700
-// <uniquifier>: Use a unique and descriptive class name */
-
-
-.oswald-regular {
-   font-family: "Oswald", sans-serif;
-   font-optical-sizing: auto;
-   font-weight: 400;
-   font-style: normal;
-}
 
 /* footer */
 #social-networks {
@@ -191,6 +169,50 @@ color: #ffffff;
    color: #3a3a3a;
    padding: 5%;
 }
+
+
+/* Font import for Lato */
+/* <weight>: Use a value from 100 to 700*/
+/*lato: css class*/
+
+
+.lato-thin {
+   font-family: "Lato", sans-serif;
+   font-weight: 100;
+   font-style: normal;
+}
+
+.lato-light {
+   font-family: "Lato", sans-serif;
+   font-weight: 300;
+   font-style: normal;
+}
+
+.lato-regular {
+   font-family: "Lato", sans-serif;
+   font-weight: 400;
+   font-style: normal;
+}
+
+.lato-bold {
+   font-family: "Lato", sans-serif;
+   font-weight: 700;
+   font-style: normal;
+}
+
+/*oswald: css class for a variable style*/
+/* Font import for Oswald */
+/*<weight>: Use a value from 200 to 700
+// <uniquifier>: Use a unique and descriptive class name */
+
+
+.oswald-regular {
+   font-family: "Oswald", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 400;
+   font-style: normal;
+}
+
 
 
 /*Media queries for responsive design for tablet and larger (768px and up) */
@@ -234,7 +256,10 @@ color: #ffffff;
       /* Adjust margin to account for larger header */
    }
    /* Hero section */
-   #cover-text{
+   #hero {
+      height: 900px;   /* Adjust height for larger screens */
+   }
+   #cover-text {
       width: 300px;     /* Adjust width for larger screens */
       right: 50px;
    }
@@ -246,4 +271,5 @@ color: #ffffff;
    #menu a:hover {
       border-bottom: 1px solid #3a3a3a;
    }
+
 }
