--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ h1, h2, h3 {
    letter-spacing: 2px;
    color: #252525
 }
+ /* Hide the header but still available for search engines */
+.hidden-heading {
+   display: none;
+}
 
 
 /* Header */
