--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,7 @@ main {
 
 .oswald-regular {
    font-family: "Oswald", sans-serif;
-   font-optical-sizing: auto;
+   font-size-adjust: auto;
    font-weight: 400;
    font-style: normal;
 }
